# django-skb

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: products.csv
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapi/: serializers.py  urls.py  views.py
mysite/myauth/: models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_groups.py
mysite/myauth/migrations/: 0001_initial.py
mysite/myauth/templates/myauth/: about-me.html  base.html  login.html  register.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestapp/: forms.py  middlewares.py  urls.py  views.py
mysite/requestapp/templates/requestapp/: base.html  handle_file.html  index.html  post.html
mysite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializer.py  sitemap.py  tests.py  urls.py  utils.py  views.py
mysite/shopapp/management/commands/: agg.py  (+4 more)
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_rename_deliver_address_order_delivery_address.py  0007_order_products.py  0008_alter_product_options_alter_order_products.py  0009_order_reciept.py  0010_product_preview.py  0011_productimage.py  0012_alter_order_options_alter_product_description_and_more.py
(+14 files in other folders)
