[tool.poetry]
name = "skb-django"
version = "0.1.0"
description = ""
authors = ["AlexNeo68"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-debug-toolbar = "^4.3.0"
django-filter = "^23.5"
djangorestframework = "^3.14.0"
docutils = "^0.20.1"
drf-spectacular = "^0.27.1"
flake8 = "^7.0.0"
gunicorn = "^21.2.0"
markdown = "^3.5.2"
pillow = "^10.2.0"
sentry-sdk = "^1.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
